update deprecation: class.newInstance()